# CA_HW3_InverseKinematics

./: CMakeLists.txt  InverseKinematics.sln  README.md  imgui.ini
InverseKinematics/: InverseKinematics.vcxproj  InverseKinematics.vcxproj.filters  main.cpp
include/: acclaim.h  graphics.h  simulation.h  util.h
include/acclaim/: bone.h  motion.h  posture.h  skeleton.h
include/graphics/: camera.h  default_camera.h  free_camera.h  rigidbody.h  shader.h  texture.h
include/simulation/: ball.h  kinematics.h
include/util/: helper.h
src/acclaim/: motion.cpp  skeleton.cpp
src/graphics/: texture.cpp
src/simulation/: ball.cpp  kinematics.cpp
